--- a/index.html
+++ b/index.html
@@ -329,12 +329,35 @@
                             </div>
                         </div>
                     </div>
-                    <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start gap-4">
-                        <button
-                            class="get-btn font-family-primary fw-bold fs-md lh-22 bg-red text-white border-0">Get
+                    <div
+                        class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start gap-4">
+                        <button class="get-btn font-family-primary fw-bold fs-md lh-22 bg-red text-white border-0">Get
                             a Quote</button>
                         <button class="view-btn font-family-primary bg-white fw-bold fs-md lh-22 color-red">View Tile
                             Visualizer</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--***** Interested *****-->
+    <section class="d-flex justify-content-center align-items-center pb-140">
+        <div class="container max-w-1140">
+            <div class="red-box position-relative w-100">
+                <div class="red-overlay w-100 h-100 top-0 position-absolute"></div>
+                <div class="d-flex justify-content-center z-2 position-relative">
+                    <div>
+                        <h2 class="font-family-primary fs-lg lh-70 text-white fw-semibold text-center mb-20">
+                            Interested?<br>Get in touch with us
+                        </h2>
+                        <p class="font-family-primary fw-normal fs-md lh-28 text-center text-white mb-36 max-w-592">
+                            Lörem ipsum koda astrobel: sutaveligen. Rodod bänera viliga. Pregigt primasofi dede
+                            facebooka: förutom tivaligt.
+                        </p>
+                        <div class="d-flex justify-content-center">
+                            <button class="get-btn font-family-primary fw-bold fs-md lh-22 border-0 color-red">Get a
+                                Quote</button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -602,10 +625,10 @@
                                 href="">Stay up to date</a></li>
                         <li class="position-relative">
                             <input
-                                class="footer-input font-family-priamry fw-normal fs-6 lh-26 mb-3 mb-sm-0 color-light-grey"
+                                class="footer-input font-family-primary fw-normal fs-6 lh-26 mb-3 mb-sm-0 color-light-grey"
                                 type="email" placeholder="Your email ">
                             <button
-                                class="footer-btn position- absolute bg-red border-0 font-family-priamry fw-semibold fs-6 lh-26 text-white">Subscribe</button>
+                                class="footer-btn position- absolute bg-red border-0 font-family-primary fw-semibold fs-6 lh-26 text-white">Subscribe</button>
                         </li>
                     </ul>
                 </div>
