--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 <body>
     <!--***** header *****-->
     <header class="d-flex justify-content-center align-items-center flex-column bg-img mb-174">
-        <nav class="py-24 w-100">
-            <div class="container max-w-1140 bg-white border-radius-24">
-                <div class="d-flex align-items-center justify-content-between w-100 py-16">
+        <nav class="py-4 w-100">
+            <div class="container max-w-1164 bg-white border-radius-24">
+                <div class="d-flex align-items-center justify-content-between w-100 py-3">
                     <a class="z-6" href="">
                         <img src="./assets/images/svg/nav-logo.svg" alt="nav-logo">
                     </a>
@@ -81,7 +81,7 @@
                 </div>
             </div>
         </nav>
-        <div class="container max-w-1140">
+        <div class="container max-w-1164">
             <h1 class="font-family-primary text-white fw-semibold fs-xl lh-80 max-w-830 mb-20 mt-5">Transform Your Space
                 with Precision and Quality:<br class="d-none d-lg-block">Get a Free Quote Today!</h1>
             <p class="font-family-primary fs-md lh-28 fw-normal text-white max-w-742 mb-36">Lörem ipsum koda astrobel:
@@ -200,14 +200,14 @@
     </header>
     <!--***** What we do *****-->
     <section class="d-flex justify-content-center align-items-center pb-140">
-        <div class="container max-w-1140">
+        <div class="container max-w-1164">
             <h2 class="font-family-primary fw-semibold fs-lg lh-70 text-center text-black mb-56">What We Do</h2>
             <div class="row" id="cardsContainer"></div>
         </div>
     </section>
     <!--***** Why Choose us *****-->
     <section class="d-flex justify-content-center align-items-center py-100 bg-light-red mb-140">
-        <div class="container max-w-1140">
+        <div class="container max-w-1164">
             <div class="row">
                 <div class="col-lg-7 col-12 mb-5 mb-lg-0 d-flex justify-content-center">
                     <div>
@@ -286,7 +286,7 @@
     </section>
     <!--***** What Our Customers Say *****-->
     <section class="d-flex justify-content-center align-items-center pb-140 flex-column overflow-hidden">
-        <div class="container max-w-1140 mb-56">
+        <div class="container max-w-1164 mb-56">
             <h2 class="font-family-primary fw-semibold fs-lg lh-70 text-center text-black mb-20">What Our Customers Say
             </h2>
             <div class="d-flex justify-content-center mb-32">
@@ -462,7 +462,7 @@
     </section>
     <!--***** How it works *****-->
     <section class="d-flex justify-content-center align-items-center pb-140">
-        <div class="container max-w-1140">
+        <div class="container max-w-1164">
             <div class="row flex-column-reverse flex-lg-row">
                 <div class="col-lg-5 col-12 d-flex justify-content-center">
                     <img src="./assets/images/png/section-5-img.png" alt="section-5-img" class="w-100 max-w-485">
@@ -525,7 +525,7 @@
     </section>
     <!--***** Interested *****-->
     <section class="d-flex justify-content-center align-items-center pb-140">
-        <div class="container max-w-1140">
+        <div class="container max-w-1164">
             <div class="red-box position-relative w-100">
                 <div class="red-overlay w-100 h-100 top-0 position-absolute"></div>
                 <div class="d-flex justify-content-center z-2 position-relative">
@@ -538,8 +538,9 @@
                             facebooka: förutom tivaligt.
                         </p>
                         <div class="d-flex justify-content-center">
-                            <button class="get-btn font-family-primary fw-bold fs-md lh-22 border-0 color-red">Get a
-                                Quote</button>
+                            <button
+                                class="get-btn font-family-primary fw-bold bg-white fs-md lh-22 border-0 color-red">Get
+                                a Quote</button>
                         </div>
                     </div>
                 </div>
@@ -548,7 +549,7 @@
     </section>
     <!--***** Our Blog *****-->
     <section class="d-flex justify-content-center align-items-center pb-140">
-        <div class="container max-w-1140">
+        <div class="container max-w-1164">
             <h2 class="font-family-primary fw-semibold fs-lg lh-70 text-center text-black mb-20">Our Blog</h2>
             <div class="d-flex justify-content-center">
                 <p class="font-family-primary fw-normal fs-md lh-28 text-center color-Vantablack max-w-592 mb-56">Lörem
@@ -560,7 +561,7 @@
     </section>
     <!--***** Frequently Asked Questions *****-->
     <section class="faq d-flex justify-content-center align-items-center pb-140">
-        <div class="container max-w-1140">
+        <div class="container max-w-1164">
             <h2 class="font-family-primary fw-semibold fs-lg lh-70 text-black mb-20 text-center">Frequently Asked
                 Questions</h2>
             <div class="d-flex justify-content-center">
@@ -660,7 +661,7 @@
     </section>
     <!--***** We provide services in these areas *****-->
     <section class="d-flex justify-content-center align-items-center pb-120">
-        <div class="container max-w-1140">
+        <div class="container max-w-1164">
             <div class="d-flex justify-content-center justify-content-lg-start">
                 <h2
                     class="font-family-primary fw-semibold fs-lg lh-70 text-black max-w-589 mb-20 text-center text-lg-start">
@@ -711,7 +712,7 @@
     </section>
     <!--***** footer *****-->
     <footer>
-        <div class="container max-w-1140 mb-4">
+        <div class="container max-w-1164 mb-4">
             <div class="row">
                 <div class="col-lg-2 col-sm-4 mb-4">
                     <img src="./assets/images/svg/footer-logo.svg" alt="logo" class="mb-20">
